# protobuf-c-text

./: .gitignore  .travis.yml  AUTHORS  CNAME  COPYING  ChangeLog  Doxyfile  Makefile  Makefile.am  Makefile.in  README.md  TODO  aclocal.m4  addressbook.proto  annotated.html  autogen.sh  c-dump.c  classes.html  configure  configure.ac  dir_2117d1aa81c2cd230ff4e060ca5c9985.html  dir_2117d1aa81c2cd230ff4e060ca5c9985_dep.map  dir_2117d1aa81c2cd230ff4e060ca5c9985_dep.md5  files.html  functions.html  functions_vars.html  generate_8c.html  generate_8c_af67715a6d806918456d60305156bb3b8_icgraph.map  generate_8c_af67715a6d806918456d60305156bb3b8_icgraph.md5  generate_8c_source.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  graph_legend.html  group__api.html  group__api_ga1dc8d12e5f0e5e071fec894d9ddad648_cgraph.map  group__api_ga1dc8d12e5f0e5e071fec894d9ddad648_cgraph.md5  (+98 more)
am/: aminclude_coverage.am  aminclude_doxygen.am
build-aux/: config.h.in
coverage/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
coverage/protobuf-c-text/: generate.c.func-sort-c.html  generate.c.func.html  generate.c.gcov.html  index-detail-sort-f.html  index-detail-sort-l.html  index-detail.html  index-sort-f.html  index-sort-l.html  index.html  parse.c.func-sort-c.html  parse.c.func.html  parse.c.gcov.html  parse.re.func-sort-c.html  parse.re.func.html  parse.re.gcov.html
coverage/protobuf-c-text/protobuf-c-text/: generate.c.func-sort-c.html  generate.c.func.html  generate.c.gcov.html  index-detail-sort-b.html  index-detail-sort-f.html  index-detail-sort-l.html  index-detail.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  parse.c.func-sort-c.html  parse.c.func.html  parse.c.gcov.html  parse.re.func-sort-c.html  parse.re.func.html  parse.re.gcov.html
coverage/protobuf-c-text/t/: addressbook.pb-c.c.func-sort-c.html  addressbook.pb-c.c.func.html  addressbook.pb-c.c.gcov.html  broken-alloc.c.func-sort-c.html  broken-alloc.c.func.html  broken-alloc.c.gcov.html  c-dump.c.func-sort-c.html  c-dump.c.func.html  c-dump.c.gcov.html  c-dump2.c.func-sort-c.html  c-dump2.c.func.html  c-dump2.c.gcov.html  c-parse.c.func-sort-c.html  c-parse.c.func.html  c-parse.c.gcov.html  c-parse2.c.func-sort-c.html  c-parse2.c.func.html  c-parse2.c.gcov.html  index-detail-sort-b.html  index-detail-sort-f.html  index-detail-sort-l.html  index-detail.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  test_msgs.c.func-sort-c.html  test_msgs.c.func.html  test_msgs.c.gcov.html
coverage/t/: addressbook.pb-c.c.func-sort-c.html  addressbook.pb-c.c.func.html  addressbook.pb-c.c.gcov.html  broken-alloc.c.func-sort-c.html  broken-alloc.c.func.html  broken-alloc.c.gcov.html  c-dump.c.func-sort-c.html  c-dump.c.func.html  c-dump.c.gcov.html  c-dump2.c.func-sort-c.html  c-dump2.c.func.html  c-dump2.c.gcov.html  c-parse.c.func-sort-c.html  c-parse.c.func.html  c-parse.c.gcov.html  c-parse2.c.func-sort-c.html  c-parse2.c.func.html  c-parse2.c.gcov.html  index-detail-sort-f.html  index-detail-sort-l.html  index-detail.html  index-sort-f.html  index-sort-l.html  index.html  test_msgs.c.func-sort-c.html  test_msgs.c.func.html  test_msgs.c.gcov.html
docs/: Doxyfile
lex-yacc-examples/: example1.compile  example1.l  example2.compile  example2.l  example3.compile  example4.compile  example4.y  example5.compile  example5.l  example5.y  example6.compile  example6.l  example6.y  example7.compile  example7.l  example7.y
man/: libprotobuf-c-text.3  protobuf_c_text_from_string.3
protobuf-c-text/: generate.c  intake.c  lexer-global.h  lexer.h  lexer.l  lexer.re  libprotobuf-c-text.pc.in  parse.re  parser.y  protobuf-c-text.h  protobuf-c-util.h
search/: all_1.js  all_10.js  all_4.js  all_6.js  all_63.js  all_65.js  all_66.js  all_67.js  all_69.js  all_6e.js  all_7.js  all_70.js  all_71.js  all_72.js  all_73.js  all_74.js  all_8.js  all_a.js  all_c.js  all_d.js  all_f.js  classes_1.js  classes_70.js  classes_73.js  classes_74.js  defines_0.js  defines_1.js  defines_63.js  defines_70.js  defines_72.js  defines_73.js  enums_1.js  enums_73.js  enumvalues_0.js  enumvalues_1.js  files_70.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  (+23 more)
t/: add_person.cc  addressbook.data  addressbook.proto  broken-alloc.c  broken-alloc.h  c-dump.c  c-dump2.c  c-intake.c  c-parse.c  c-parse2.c  dump_people.cc  test_generation.sh  test_intake.sh  test_msgs.c  test_parse.sh  tutorial_test.data
t/broken/: bad-bool.text  bad-enum.text  bad-number.text  bad-sint64-fixed.text  bad-str-esc.text  bad-string.text  bad-uint-fixed.text  bad-uint.text  bareword-instead-of-string.text  bool.text  bool2.text  colon-for-message.text  cut-off.text  cut-off2.text  double-opt-enum.text  double-opt-string.text  extra-cbrace.text  extra-cbrace2.text  extra-colon.text  extra-obrace2.text  float-for-int.text  int-too-big.text  message-for-int.text  missing-cbrace.text  missing-colon.text  missing-obrace.text  negative-in-unsigned.text  non-existant-field.text  number.text
t/broken2/: bad-double.text  bad-float.text  bad-uint32.text  bad_enum.text  bad_enum2.text  dup-opt-msg.text
